Fixed buttons on Mobile

--- a/src/index.css
+++ b/src/index.css
@@ -317,13 +317,13 @@ code {
     margin: 0px 0px 0px 1.5vw;
     text-decoration: none;
     white-space: nowrap;
-
-
+    font-size: 1.9vw;
   }
 
   .tokenInfobtn:nth-child(2) {
     margin-top: 1.3vh;
   }
+
 
   /* TokenInfoBar Mobile End */
 
@@ -374,6 +374,7 @@ code {
     min-width: 100%;
     max-width: 100%;
   }
+
 
 }
 
